--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body{
     background-image: linear-gradient(to right,violet , rgb(208, 238, 73));
 }
 img{
-    width:14%;
     border-radius: 50px;
 }
 h1{
@@ -33,4 +32,22 @@ button {
   border: 1px solid rgb(15, 15, 15);
   border-radius: 50px;  
   font-size:80px;
+}
+@media (min-width:768px){
+    img{
+        width:23%;
+        height:13%;
+    }
+}
+@media only screen and (min-width:1224px){
+    img{
+        width:15%;
+        height:25%;
+    }
+}
+@media only screen and (min-device-width:768px) and (max-device-width:1024px){
+    img{
+       width:22%;
+        height:29%; 
+    }
 }
